--- a/manifest.json
+++ b/manifest.json
@@ -7,11 +7,11 @@
     "type": "module"
   },
   "description": "CG T2 notes  extension.",
-  "permissions": ["scripting"],
+  "permissions": ["scripting", "storage"],
   "host_permissions": ["http://*/*", "https://*/*"],
 
   "action": {
     "default_popup": "index.html",
-    "default_icon":"icon32.png"
+    "default_icon": "icon32.png"
   }
 }
